--- a/Source/manifest.json
+++ b/Source/manifest.json
@@ -9,5 +9,10 @@
 			"js": ["names.js"],
 			"run_at": "document_end"
 		}
-	]
+	],
+	"icons": {
+		"16": "icon16.png",
+		"48": "icon48.png",
+		"128": "icon128.png"
+	}
 }
