--- a/source/chrome-old/manifest.json
+++ b/source/chrome-old/manifest.json
@@ -1,14 +1,12 @@
 {
-"update_url": "https://clients2.google.com/service/update2/crx",
-
 	"manifest_version": 2,
 	"name": "VitalMX.com Fixer",
 	"description": "Fixes the things that suck about VitalMX.com",
-	"version": "2.1",
+	"version": "1.1",
 	"content_scripts": [
 		{
 			"matches": ["http://www.vitalmx.com/forums/*"],
-			"js": ["jquery.js", "names.js"],
+			"js": ["names.js"],
 			"run_at": "document_end"
 		}
 	],
