--- a/source/safari.safariextension/Info.plist
+++ b/source/safari.safariextension/Info.plist
@@ -1,52 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>Author</key>
-	<string>Resen</string>
-	<key>Builder Version</key>
-	<string>8536.30.1</string>
-	<key>CFBundleDisplayName</key>
-	<string>VitalMX.com Fixer</string>
-	<key>CFBundleIdentifier</key>
-	<string>com.resen.vitalmxfixer</string>
-	<key>CFBundleInfoDictionaryVersion</key>
-	<string>6.0</string>
-	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
-	<key>CFBundleVersion</key>
-	<string>1</string>
-	<key>Chrome</key>
+	<dict>
+		<key>Author</key>
+			<string>Resen</string>
+		<key>Builder Version</key>
+			<string>8536.30.1</string>
+		<key>CFBundleDisplayName</key>
+			<string>Vitard Fixer</string>
+		<key>CFBundleIdentifier</key>
+			<string>com.resen.vitalmxfixer</string>
+		<key>CFBundleInfoDictionaryVersion</key>
+			<string>6.0</string>
+		<key>CFBundleShortVersionString</key>
+			<string>2.1.1</string>
+		<key>CFBundleVersion</key>
+			<string>2.1.1</string>
+		<key>Chrome</key>
 	<dict/>
 	<key>Content</key>
-	<dict>
-		<key>Scripts</key>
 		<dict>
-			<key>End</key>
-			<array>
-				<string>names.js</string>
-			</array>
+			<key>Scripts</key>
+			<dict>
+				<key>End</key>
+				<array>
+					<string>jquery.js</string>
+					<string>names.js</string>
+				</array>
+			</dict>
 		</dict>
-	</dict>
 	<key>Description</key>
-	<string>Fixes the things that suck about VitalMX.com</string>
+		<string>Fixes the things that suck about VitalMX.com</string>
 	<key>ExtensionInfoDictionaryVersion</key>
-	<string>1.0</string>
+		<string>1.0</string>
 	<key>Permissions</key>
-	<dict>
-		<key>Website Access</key>
 		<dict>
-			<key>Allowed Domains</key>
-			<array>
-				<string>*.vitalmx.com/forums</string>
-			</array>
-			<key>Level</key>
-			<string>Some</string>
+			<key>Website Access</key>
+			<dict>
+				<key>Allowed Domains</key>
+				<array>
+					<string>*.vitalmx.com/forums</string>
+				</array>
+				<key>Level</key>
+				<string>Some</string>
+			</dict>
 		</dict>
-	</dict>
 	<key>Update Manifest URL</key>
-	<string>https://github.com/bryanbuchanan/vitalmx-fixer/raw/master/dist/update-safari.plist</string>
+		<string>https://github.com/bryanbuchanan/vitalmx-fixer/raw/master/dist/update-safari.plist</string>
 	<key>Website</key>
-	<string>http://resen.co</string>
-</dict>
+		<string>http://resen.co</string>
+	</dict>
 </plist>
